# FastAPIProject1

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
app/: __init__.py
app/api/: __init__.py
app/config/: __init__.py  sql_db_settings.py
app/core/: __init__.py
app/core/enums/: __init__.py  gender.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base_class.py
app/models/structured/: order.py  order_item.py  product.py  user.py
