[project]
name = "fastapiproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "pydantic[pastdate]>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.35.0",
    "asyncpg>=0.30.0",
    "typing>=3.10.0.0",
]

[projects.url]
Homepage = "https://github.com/AlexRed73/FastAPIProject1"
Repository = "https://github.com/AlexRed73/FastAPIProject1"
Documentation = "https://github.com/AlexRed73/FastAPIProject1"

